[package]
name = "mecha-wifi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/Wi-Fi-station-rust"
homepage = "https://github.com/Dhruvesh08/Wi-Fi-station-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifi-station = {path = "./wifi-station"}
tokio = { version = "1", default-features = false, features = ["full"] }
env_logger = "0"
log = { version = "0" }