[package]
name = "wifi-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version="0", default-features = false, features = ["ini"]}
log = { version = "0" }
serde =  {version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["net",  "rt", "sync", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0"
